--- a/src/ch4/CMakeLists.txt
+++ b/src/ch4/CMakeLists.txt
@@ -8,6 +8,17 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(Eigen3 REQUIRED)
+find_package(Sophus REQUIRED)
+set(Sophus_LIBRARIES libSophus.so)
+
+include_directories(${EIGEN3_INCLUDE_DIR})
+# include_directories(${Sophus_INCLUDE_DIRS})
+# Sophus
+include_directories("/usr/local/include")
+
+# 添加库路径（手动指定）
+# link_directories("/usr/local/lib")
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -22,3 +33,15 @@ if(BUILD_TESTING)
 endif()
 
 ament_package()
+
+add_executable(useSophus src/useSophus.cpp)
+
+ament_target_dependencies(useSophus rclcpp Eigen3)
+include_directories(/usr/local/include/sophus)
+
+# 链接库文件
+# target_link_libraries(useSophus ${Sophus_LIBRARIES})
+
+install(TARGETS
+  useSophus
+  DESTINATION lib/${PROJECT_NAME})
