--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,8 +18,9 @@
       "request": "launch",
       "type": "cppdbg",
       "cwd": "${workspaceFolder}/",
-      "args": ["./src/ch7/src/1.png","./src/ch7/src/2.png","./src/ch7/src/1_depth.png","./src/ch7/src/2_depth.png"],
-      "program": "${workspaceFolder}/install/ch7/lib/ch7/pose_estimation_3d3d",
+      // "args": ["./src/ch7/src/1.png","./src/ch7/src/2.png","./src/ch7/src/1_depth.png","./src/ch7/src/2_depth.png"],
+      "args": ["./src/ch8/src/LK1.png","./src/ch8/src/LK2.png"],
+      "program": "${workspaceFolder}/install/ch8/lib/ch8/optical_flow",
       "environment": [
         {
           "name": "LD_LIBRARY_PATH",
